# Elektron-SDK

./: .gitignore  README.md
Cpp-C/: CMakeLists.txt
Cpp-C/Ema/: CMakeLists.txt
Cpp-C/Ema/Examples/: CMakeLists.txt
Cpp-C/Ema/Examples/PerfTools/: CMakeLists.txt
Cpp-C/Ema/Examples/PerfTools/EmaCppConsPerf/: CMakeLists.txt
Cpp-C/Ema/Examples/Training/: CMakeLists.txt
Cpp-C/Ema/Examples/Training/Consumer/100_Series_Examples/100__MarketPrice__Streaming/: CMakeLists.txt
Cpp-C/Ema/Src/Access/: CMakeLists.txt  cmake.emaLibraryFiles.txt
Cpp-C/Eta/: CMakeLists.txt
Cpp-C/Eta/Applications/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/AuthLock/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/Consumer/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/EDFConsumer/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/EncDecExample/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/NIProvider/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/Provider/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/RmtesNewsDisplay/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/VAConsumer/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/VANIProvider/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/VAProvider/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/VAQueueConsumer/: CMakeLists.txt
Cpp-C/Eta/Applications/Examples/WatchlistConsumer/: CMakeLists.txt
Cpp-C/Eta/Applications/PerfTools/ConsPerf/: CMakeLists.txt
Cpp-C/Eta/Applications/PerfTools/NIProvPerf/: CMakeLists.txt
Cpp-C/Eta/Applications/PerfTools/ProvPerf/: CMakeLists.txt
Cpp-C/Eta/Applications/PerfTools/TransportPerf/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Consumer/Module_1a_Connect/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Consumer/Module_1b_Ping/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Consumer/Module_1c_ReadWrite/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Consumer/Module_2_Login/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Consumer/Module_3_Directory/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Consumer/Module_4_Dictionary/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Consumer/Module_5_ItemRequest/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/NIProvider/Module_1a_Connect/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/NIProvider/Module_1b_Ping/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/NIProvider/Module_1c_ReadWrite/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/NIProvider/Module_2_Login/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/NIProvider/Module_3_ProvideDirectory/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/NIProvider/Module_4_Dictionary/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/NIProvider/Module_5_ProvideContent/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Provider/Module_1a_Connect/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Provider/Module_1b_Ping/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Provider/Module_1c_ReadWrite/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Provider/Module_2_HandleLogin/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Provider/Module_3_ProvideDirectory/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Provider/Module_4_ProvideDictionary/: CMakeLists.txt
Cpp-C/Eta/Applications/Training/Provider/Module_5_HandleItemRequest/: CMakeLists.txt
Cpp-C/Eta/Impl/: CMakeLists.txt  rsslVersion.h
Cpp-C/Eta/Impl/Codec/: CMakeLists.txt  arrayDecoder.c  cmake.rsslLibraryFiles.txt  dataDictionary.c  dataTypes.c  dataUtils.c  decodeRoutines.c  dictionary.c  dtime.c  elemListDecoder.c  elemListEncoder.c  fieldListDecoder.c  fieldListDefs.c  fieldListEncoder.c  fileUtil.c  filterListDecoder.c  filterListEncoder.c  mapDecoder.c  messageDecoders.c  messageEncoders.c  msgs.c  numeric.c  primitiveDecoders.c  primitiveEncoders.c  rsslCharSet.c  rsslRmtes.c  rsslVersionShared.c  rsslVersionStatic.c  rwfConvert.c  seriesDecoder.c  setDictionary.c  state.c  vectorDecoder.c  xmlDomainDump.c  xmlDump.c  xmlMsgDump.c
Cpp-C/Eta/Impl/Codec/rtr/: decoderTools.h  encoderTools.h  intDataTypes.h  retmacros.h  rsslCharSet.h  rwfConvert.h
Cpp-C/Eta/Impl/RDM/: CMakeLists.txt
Cpp-C/Eta/Impl/Reactor/: CMakeLists.txt
Cpp-C/Eta/Impl/Transport/: ripccomp.c  ripchttp.c  ripcinetutils.c  ripcssldh.c  ripcsslutils.c  ripcutils.c  rsslImpl.c  rsslSeqMcastTransportImpl.c  rsslSocketTransportImpl.c  rsslUniShMemTransportImpl.c  shmemtrans.c
Cpp-C/Eta/Impl/Transport/Util/: cutildfltcbuffer.c  cutilsmplcbuffer.c  dfltcbuffer.c  fail.c  gettime.c  gettimeofday.c  hasht.c  intqtool.c  platmem.c  primenum.c  qctool.c  qtool.c  rthashfuncs.c  rtrhexdump.c  rtrpipe.c  rtrsig.c  rtrthrd.c  shmem.c  shmemqueue.c  smplcbuffer.c  socket.c  tr_sha_1.c  tr_sl1_64.c
Cpp-C/Eta/Impl/Transport/Util/arch/: get_cpuid.asm  get_cpuid_i86pc_32.s  get_cpuid_i86pc_64.s  get_cpuid_linux32.s  get_cpuid_linux64.s  get_cpuid_win.c  rtratomic_i86pc.s  rtratomic_i86pc_64.s  rtratomic_linux.c  rtratomic_sparc.s  rtratomic_sparc_64.s
Cpp-C/Eta/Impl/Transport/rtr/: ripc_int.h  ripcflip.h  ripch.h  ripcinetutils.h  ripcssljit.h  ripcsslutils.h  ripcutils.h  rsslAlloc.h  rsslChanManagement.h  rsslErrors.h  rsslLoadInitTransport.h  rsslSeqMcastTransportImpl.h  rsslSocketTransport.h  rsslSocketTransportImpl.h  rsslUniShMemTransportImpl.h  shmemtrans.h
Cpp-C/Eta/Impl/Util/: CMakeLists.txt  rsslHashTable.c  rsslMemoryBuffer.c  rsslNotifier.c
Cpp-C/Eta/Include/Codec/: decodeRoutines.h  dictionary.h  fieldListDefs.h  xmlDomainDump.h  xmlDump.h  xmlMsgDump.h
Cpp-C/Eta/Include/Codec/rtr/: rsslAckMsg.h  rsslCloseMsg.h  rsslDataDictionary.h  rsslDataTypeEnums.h  rsslDateTime.h  rsslElementList.h  rsslFieldList.h  rsslFilterList.h  rsslGenericMsg.h  rsslMap.h  rsslMsg.h  rsslMsgBase.h  rsslMsgKey.h  rsslPostMsg.h  rsslQos.h  rsslRDM.h  rsslReal.h  rsslRefreshMsg.h  rsslRequestMsg.h  rsslRetCodes.h  rsslSeries.h  rsslState.h  rsslStatusMsg.h  rsslUpdateMsg.h  rsslVector.h
Cpp-C/Eta/Include/Transport/rtr/: rsslTransport.h
Cpp-C/Eta/Utils/Libxml2/: CMakeLists.txt
(+371 files in other folders)
