cmake_minimum_required (VERSION 3.8)

# output directory for examples
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ETA_EXAMPLES_OUTPUT_DIR} )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ETA_LIBS_OUTPUT_DIR} )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ETA_LIBS_OUTPUT_DIR} )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ETA_LIBS_OUTPUT_DIR} )

if ( ${CMAKE_SYSTEM_NAME} STREQUAL "Windows" )
  set( "CMAKE_SHARED_LINKER_FLAGS_DEBUG_MDD" ${CMAKE_SHARED_LINKER_FLAGS} )
  set( "CMAKE_SHARED_LINKER_FLAGS_RELEASE_MD" "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:MSVCRTD" )
endif()

add_subdirectory( Impl )

# libxml2
add_subdirectory( Utils/Libxml2 )

add_subdirectory( Applications )
