cmake_minimum_required (VERSION 3.8)

set ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ETA_EXAMPLES_OUTPUT_DIR} )
unset( CMAKE_ARCHIVE_OUTPUT_DIRECTORY )
unset( CMAKE_LIBRARY_OUTPUT_DIRECTORY )

if ( ${CMAKE_SYSTEM_NAME} STREQUAL "Windows" )
  set( EXAMPLE_STATIC_LIBRARIES wininet.lib ws2_32.lib librssl_static )
  set( EXAMPLE_SHARED_LIBRARIES wininet.lib ws2_32.lib librssl_shared )
  set( STATIC_EXT "_static" )

elseif ( ${CMAKE_SYSTEM_NAME} STREQUAL "Linux" )
  set( SYSTEM_LIBRARIES rt dl pthread m )
  set( EXAMPLE_LIBRARIES_STATIC librssl_static ${RSSL_VACACHE_STATIC} )
  set( EXAMPLE_LIBRARIES_SHARED librssl_shared ${RSSL_VACACHE_SHARED} )

endif()

add_subdirectory( Examples/AuthLock )
add_subdirectory( Examples/Consumer )
add_subdirectory( Examples/EncDecExample )
add_subdirectory( Examples/NIProvider )
add_subdirectory( Examples/Provider )
add_subdirectory( Examples/VAConsumer )
add_subdirectory( Examples/VANIProvider )
add_subdirectory( Examples/VAProvider )
add_subdirectory( Examples/WatchlistConsumer )
add_subdirectory( PerfTools/ConsPerf )
add_subdirectory( PerfTools/NIProvPerf )
add_subdirectory( PerfTools/ProvPerf )
add_subdirectory( PerfTools/TransportPerf )
add_subdirectory( Training/Consumer/Module_1a_Connect )
add_subdirectory( Training/Consumer/Module_1b_Ping )
add_subdirectory( Training/Consumer/Module_1c_ReadWrite )
add_subdirectory( Training/Consumer/Module_2_Login )
add_subdirectory( Training/Consumer/Module_3_Directory )
add_subdirectory( Training/Consumer/Module_4_Dictionary )
add_subdirectory( Training/Consumer/Module_5_ItemRequest )
add_subdirectory( Training/NIProvider/Module_1a_Connect )
add_subdirectory( Training/NIProvider/Module_1b_Ping )
add_subdirectory( Training/NIProvider/Module_1c_ReadWrite )
add_subdirectory( Training/NIProvider/Module_2_Login )
add_subdirectory( Training/NIProvider/Module_3_ProvideDirectory )
add_subdirectory( Training/NIProvider/Module_4_Dictionary )
add_subdirectory( Training/NIProvider/Module_5_ProvideContent )
add_subdirectory( Training/Provider/Module_1a_Connect )
add_subdirectory( Training/Provider/Module_1b_Ping )
add_subdirectory( Training/Provider/Module_1c_ReadWrite )
add_subdirectory( Training/Provider/Module_2_HandleLogin )
add_subdirectory( Training/Provider/Module_3_ProvideDirectory )
add_subdirectory( Training/Provider/Module_4_ProvideDictionary )
add_subdirectory( Training/Provider/Module_5_HandleItemRequest )
